# curso-chatbots

./: .cursorignore  .env_template  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_myself_steps.md  SECURITY.md  pyproject.toml  requirements.txt
.cursor/rules/: guidelines.mdc  my-stack.mdc  workflow-preferences.mdc
data/: Alice_in_Wonderland.txt  Alicia en el país de las maravillas.txt  short_sentences.json
data/code/: dependencies_graph.gml
src/chatbots/: a_basic.py  a_basic_local.py  b_openai_assistant.py  c_streamlit.py
src/config/: parameters.py  settings.py
src/local_llm/: README.md  client_local.py  model_local_lc.py  model_local_thf.py
src/models_ia/: call_model.py
src/openAI_test/: tmp.py
src/rag/: a_rag_openai.py  b_rag_local.py  b_rag_openai_store.py  rag_prompting.py
src/rag/a_intro/: 0_lexical_method.py  1_models_intro.py  2_semantic_method.py  helpers_semantic.py
src/rag/b_basica/: README.md  app.py  nlp_proc.py  storage.py  utils.py
